--- a/src/Components/TaskContainer/task.css
+++ b/src/Components/TaskContainer/task.css
@@ -79,3 +79,15 @@
   display: flex;
   gap: 10px;
 }
+
+
+@media screen and (max-width:500px) {
+
+  
+
+  .task-column h2{
+    font-size: .8rem;
+  }
+
+  
+}
