--- a/src/Components/Navbar/Nav.css
+++ b/src/Components/Navbar/Nav.css
@@ -34,3 +34,16 @@
   border-radius: 32px;
   cursor: pointer;
 }
+
+
+@media screen and (max-width:500px) {
+  .addTaskButtonContainer button {
+    background-color: #219ebc;
+    color: white;
+    height: 50%;
+    width: 70%;
+    border: none;
+    border-radius: 32px;
+    cursor: pointer;
+  }
+}
